Add counter html

--- a/Counter/index.html
+++ b/Counter/index.html
@@ -7,6 +7,14 @@
   <title>COUNTER</title>
 </head>
 <body>
-  
+  <div class="main-container">
+    <h1>Counter</h1>
+    <h5 class="count">0</h5>
+    <div class="btb-container">
+      <button class="btn increase">Increase</button>
+      <button class="btn reset">reset</button>
+      <button class="btn decrease">Decrease</button>
+    </div>
+  </div>
 </body>
 </html>
